# daqconf

./: CMakeLists.txt
apps/: GraphBuilder.cpp  GraphBuilder.hpp  create_config_plot.cxx
config/: daqconf_full_config.json  daqconf_k8s.json
docs/: ConfigDatabase.md  ConfigPlotting.md  ConfigurationsForCasualUsers.md  Inspector.md  InstructionsForCasualUsers.md  MigratingToNewConfgen.md  MigratingTov3_2_0Confgen.md  README.md  TextualDBE.md  UpdatedIOManagerAPI.md  daqconf-Diagrams.md
python/daqconf/: consolidate.py  createOKSdb.py  dal_helpers.py  detreadoutmap.py  drolink_map.py  dromap2oks.py  enable.py  enable_tpg.py  generate.py  generate_dataflowOKS.py  generate_hsiOKS.py  generate_hwmap.py  generate_readoutOKS.py  generate_sessionOKS.py  generate_triggerOKS.py  get_session_apps.py  get_system_apps.py  oks_format.py  session.py  set_session_env_var.py  set_system_env_var.py  system.py  test_gui.py  utils.py  validate.py
python/oksconfgen/: consolidate.py  generate_hwmap.py  (+1 more)
scripts/: cider  consolidate  consolidate_files  copy_configuration  createOKSdb  daqconf.ini  daqconf_full_config.json  daqconf_global_gen  daqconf_inspector  daqconf_inspector.py  daqconf_k8s.json  daqconf_multiru_gen  daqconf_set_system_env_var  daqconf_timing_gen  daqconf_viewer  daqconf_viewer.css  daqconf_with_swtpg.ini  daqconf_with_swtpg.json  download_config  dromap-tool.py  dromap2oks  dromap_editor  dunedaq_confdb_set_session_env_var  generate_oks_session  generate_readoutOKS  get_apps  oks-format  oks_enable  oks_enable_tpg  textual_dbe  upload_config  validate
(+125 files in other folders)
